# routes/api.php
@@ -10,9 +10,9 @@ Route::controller(AuthController::class)->group(function ($router) {
     Route::post('/register', [AuthController::class, 'register']);
 });
 
-Route::post('get-weather-by-city', [WeatherController::class, 'getWeatherByCity']);
 
 Route::middleware('custom-sanctum-auth')->group(function () {
+    Route::post('get-weather-by-city', [WeatherController::class, 'getWeatherByCity']);
     Route::post('logout', [AuthController::class, 'logout']);
     
 });
